--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h3>හෙලෝ කොහොමද ඔයාට <br>පහල බටන් එක ඔබන්න</h3>
         <button class="click-me-btn" onclick="handleButtonClick()">Click Me</button>
     </div>
 
